<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.unal.iun.ServiciosActivity" >

    <item
        android:id="@+id/action_busqueda"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/buscar"/>
    <item
        android:id="@+id/ItemVolver"
        android:icon="@drawable/ic_volver"
        android:showAsAction="always"
        android:title="@string/menu_volver"
        android:visible="true">
    </item>
    <item
        android:id="@+id/ItemRefresh"
        android:icon="@drawable/ic_refresh"
        android:showAsAction="always"
        android:title="@string/menu_Recargar"
        android:visible="true">
    </item>
    <item
        android:id="@+id/ItemForward"
        android:icon="@drawable/ic_forward"
        android:showAsAction="always"
        android:title="@string/menu_adelante"
        android:visible="true">
    </item>

</menu>