<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.unal.iun.DirectorioActivity" >

    <item
        android:id="@+id/action_busqueda"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/buscar"/>
    <item
        android:id="@+id/ItemMapa"
        android:icon="@drawable/mapap"
        android:showAsAction="always"
        android:title="@string/menu_mapa"
        android:visible="true">
    </item>
    <item
        android:id="@+id/ItemWEB"
        android:icon="@drawable/enlacep"
        android:showAsAction="always"
        android:title="@string/menu_irweb"
        android:visible="true">
    </item>

</menu>